--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -65,3 +65,4 @@ jobs:
           preRelease: false
           draft: true
           generateReleaseNotes: true
+          token: ${{ secrets.GITHUB_TOKEN }}
