--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,8 +18,9 @@ jobs:
       - name: Setup Docker (Windows)
         run: docker build -t cross-rust-windows docker/windows
       - name: Test
-        run: apt list --installed | grep ssl
-        run: openssl version
+        run: | 
+            apt list --installed | grep ssl
+            openssl version
       - name: Install latest rust
         uses: actions-rs/toolchain@v1
         with:
