--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,11 +31,10 @@ num-derive = "0.3"
 hyper = "0.14"
 hyper-rustls = { version = "0.23" }
 rustls = { version = "0.20" }
+tungstenite = { version = "0.27", features = ["rustls-tls-native-roots"] }
 warp = { version = "0.3.2", features = ["tls"] }
 lazy_static = "1.4"
 clipboard = "0.5.0"
-native-tls = "0.2.8"
-websocket = "0.26.2"
 anyhow = "1.0"
 arc-swap = "1.5"
 obake = "1.0"
